...
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor:  AppColors.background ,
        appBar: AppBar(
          backgroundColor: const Color.fromARGB(0, 255, 255, 255),
          title: Text(
            "Eventos por categoría",
            style: TextStyle(
              color: AppColors.textPrimary,
              fontSize: 25,
              fontWeight: FontWeight.w600,
            ),
          ),
...
